Fix scrollbar position

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,6 +18,7 @@
 html {
   font-size: 18px;
   background: var(--bg);
+  scrollbar-gutter: stable;
 }
 
 body {
